# FrobeniusNum

./: CMakeLists.txt  LICENSE  README.md  cuww1.txt  run.sh
src/: main.cpp
